added doctor,patient,and staff details table

--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="{% url 'home'%}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Find A Doctor</a>
+            <a class="nav-link" href="{% url 'finddoctor' %}">Find A Doctor</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Predict Diseases</a>
