--- a/mainApp/templates/mainApp/index.html
+++ b/mainApp/templates/mainApp/index.html
@@ -6,7 +6,7 @@
 
 {% block slider %}
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
+    <div style="height: 80vh;" class="carousel-inner">
       <div class="carousel-item active">
         <img src="{% static 'mainApp/images/cover1.png' %}" class="d-block img-fluid" alt="coverimage 1"> 
       </div>
