--- a/userAuth/static/userAuth/css/style.css
+++ b/userAuth/static/userAuth/css/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .form-container {
     width: 80%;
     margin: auto;
@@ -22,8 +27,8 @@
     width: auto;
     background-color: white;
     border-radius: 20px;
-    height: 100vh;
-    padding: 20px;
+    min-height: 100vh;
+    padding: 10px;
     position: relative;
 }
 
@@ -32,12 +37,20 @@
 }
 
 .userDash {
-    padding: 40px;
+    padding: 10px 40px 10px 40px;
+}
+
+.user-navigation-dashboard{
+    display: flex;
+}
+
+.user-dashboard{
+    width: 100%;
+    padding: 10px 40px 10px 40px;
 }
 
 #user-dash-hospital-logo {
     font-weight: bold;
-    font-size: 24px;
     text-decoration: none;
     color: #0AB8B7;
     text-align: center;
@@ -48,7 +61,7 @@
 }
 
 #user-profile-pic-container {
-    width: 100%;
+    width: 100px;
     margin: auto;
 }
 
@@ -64,6 +77,7 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
+    padding: 10px;
 }
 
 #user-dash-nav-active {
@@ -81,7 +95,14 @@
 
 }
 
-.user-accounts-setting {
+.user-nav-setting{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 75vh;
+}
+
+/* .user-accounts-setting {
     position: absolute;
     bottom: 0;
     margin-left: auto;
@@ -89,7 +110,13 @@
     left: 0;
     right: 0;
     text-align: center;
+} */
+
+.user-accounts-setting{
+    text-align: center;
 }
+
+
 
 .user-accounts-setting a{
     color: black;
