--- a/mainApp/templates/mainApp/finddoctor.html
+++ b/mainApp/templates/mainApp/finddoctor.html
@@ -16,8 +16,8 @@
                   <h5 style="text-align: center;">{{doctor.fullName|slice:":15"}}...</h5>
                     <p>{{doctor.department}}</p>
                   <div class="view-book-container">
-                    <a href="#"><button class="btn" style="background-color: #B7274C;"> <span style="font-size: 12px; color: white;">View Profile</span> </button></a>
-                    <a href="#"><button class="btn btn-primary" style="background-color: #164A96;;"><span style="font-size: 12px; color: white;">Book Appointment</span></button></a>
+                    <a href="{% url 'doctorprofile' doctor.id %}"><button class="btn" style="background-color: #B7274C;"> <span style="font-size: 12px; color: white;">View Profile</span> </button></a>
+                    <a href="#"><button class="btn " style="background-color: #164A96;;"><span style="font-size: 12px; color: white;">Book Appointment</span></button></a>
                   </div>
                 </div>
               </div>
