--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -29,10 +29,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul id="customHeaderUl" class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <li id="{{homeactive}}"  class="nav-item">
             <a class="nav-link" href="{% url 'home'%}">Home</a>
           </li>
-          <li class="nav-item">
+          <li id="{{fdoctoractive}}" class="nav-item">
             <a class="nav-link" href="{% url 'finddoctor' %}">Find A Doctor</a>
           </li>
           <li class="nav-item">
