--- a/userAuth/templates/userAuth/userDashHome.html
+++ b/userAuth/templates/userAuth/userDashHome.html
@@ -4,7 +4,7 @@
 
 {% block userDashContent %}
     <h3>User Dashboard</h3>
-    <div style="border: 1px solid black; width: 300px; height: 2000px; background-color: black;">
+    <!-- <div style="border: 1px solid black; width: 300px; height: 2000px; background-color: black;">
 
-    </div>
+    </div> -->
 {% endblock userDashContent %}
