added patients and,  view and delete features

--- a/userAuth/templates/userAuth/changepassword.html
+++ b/userAuth/templates/userAuth/changepassword.html
@@ -8,7 +8,7 @@
 
   <h4 style="text-align: center;">Change password</h4>
 
-  <form style="background-color: #ced7d8;" action="" method="POST" novalidate class="p-5">
+  <form style="background-color: #ced7d8;" method="POST" novalidate class="p-5">
 
     {% csrf_token %}
 
