--- a/userAuth/templates/userAuth/baseUserDash.html
+++ b/userAuth/templates/userAuth/baseUserDash.html
@@ -68,8 +68,10 @@
             {% elif request.user|has_group:"staff" %}
             <ul>
               <!-- id="user-dash-nav-active" -->
-              <li><a href="{% url 'userDashHome' %}">Add patient</a></li>
-              <li><a href="#">Schedule appointments</a></li>
+              <li><a href="{% url 'userDashHome' %}">Dashboard</a></li>
+              <li><a href="{% url 'addNonRegUser' %}">Add patient</a></li>
+              <li><a href="{% url 'viewPatients' %}">View Patients</a></li>
+              <li><a id="{{sAppointmentActive}}" href="{% url 'scheduleAppointment' %}">Schedule appointments</a></li>
             </ul>
             {% endif %}
           </div>
@@ -107,21 +109,24 @@
   {% endif %}
 
 
-
-
-
-  <!-- Optional JavaScript; choose one of the two! -->
-
-  <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
 
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
+    <script>
+      function deleteUser(id)
+      {
+
+        let c = confirm("Are you sure you want to delete the user ?"+id)
+        if(c)
+        {
+          alert("User deleted sucessfully")
+          location.href= `/accounts/deleteNonRegUser/${id}`
+        }
+      }
+    </script>
+
+ 
 </body>
 
 </html>
