--- a/userAuth/templates/userAuth/viewPatients.html
+++ b/userAuth/templates/userAuth/viewPatients.html
@@ -40,7 +40,7 @@
                 <td>{{npd.age}}</td>
                 <td>{{npd.gender}}</td>
                 <td>{{npd.phone}}</td>
-                <td class="d-flex gap-3"><button class="btn btn-success"><span style="font-size: 12px;">Edit</span></button> <button onclick="deleteUser('{{npd.id}}')" class="btn btn-danger" ><span style="font-size:12px;">Delete</span></button> <button class="btn" style="background-color: #164A96; font-size: 12px;"> <span style="color: white;">Book appointment</span></button></td>
+                <td class="d-flex gap-3"> <a href="{% url 'updateNonRegPatient' npd.id %}"><button class="btn btn-success"><span style="font-size: 12px;">Edit</span></button></a>  <button onclick="deleteUser('{{npd.id}}')" class="btn btn-danger" ><span style="font-size:12px;">Delete</span></button> <a href="{% url 'bookAppointmentNonReg' npd.id %}"><button class="btn" style="background-color: #164A96; font-size: 12px;"> <span style="color: white;">Book appointment</span></button></a></td>
               </tr>
 
               {% endfor %}
