--- a/mainApp/templates/mainApp/doctorProfile.html
+++ b/mainApp/templates/mainApp/doctorProfile.html
@@ -1,43 +1,46 @@
 {% extends 'mainApp/base.html' %}
 {% load static %}
-
+{% load auth_extras %}
 {% block title%} Doctor Profile {% endblock title %}
 
 
 {% block mainContent %}
-    <div class="container">
-        {% if doctor %}
-        <div class="row gy-5 justify-content-center mt-4">
+<div class="container">
+    {% if doctor %}
+    <div class="row gy-5 justify-content-center mt-4">
 
-            <div style="text-align: center;" class="col-lg-4 col-12 doctor-image-container border p-5">
-                <img class="img-fluid"  src="/media/{{doctor.profile_pic}}" alt="doctor picture">
-                <h3>Dr. {{doctor.fullName}}</h3>
-                <p>{{doctor.department}}</p>
-                
-                <a href="#"><button style="background-color: #164A96;" class="btn btn-primary">Book Appointment</button></a>
-            </div>
+        <div style="text-align: center;" class="col-lg-4 col-12 doctor-image-container border p-5">
+            <img class="img-fluid" src="/media/{{doctor.profile_pic}}" alt="doctor picture">
+            <h3>Dr. {{doctor.fullName}}</h3>
+            <p>{{doctor.department}}</p>
 
-            <div class="col-lg-8 col-12 doctor-details-container">
-                <div class="experience-education-container p-5">
-                    <div class="experience">
-                        <h5>Experience</h5>
-                        <p>{{doctor.experience}}</p>
-                    </div>
-
-                    <div class="education">
-                        <h5>Education</h5>
-                        <p>{{doctor.education}}</p>
-                    </div>
-                </div>
-            </div>
-
+            {% if request.user|has_group:"doctor" or request.user|has_group:"staff" %}
+            {% else %}
+            <a href="#"><button style="background-color: #164A96;" class="btn btn-primary">Book Appointment</button></a>
+            {% endif %}
         </div>
 
-        {% else %}
+        <div class="col-lg-8 col-12 doctor-details-container">
+            <div class="experience-education-container p-5">
+                <div class="experience">
+                    <h5>Experience</h5>
+                    <p>{{doctor.experience}}</p>
+                </div>
 
-        <h4 style="text-align: center; color: white;" class="bg-danger mt-5 p-3">Sorry ! We did not find any doctor</h4>
+                <div class="education">
+                    <h5>Education</h5>
+                    <p>{{doctor.education}}</p>
+                </div>
+            </div>
+        </div>
 
-        {% endif %}
-        
     </div>
+
+    {% else %}
+
+    <h4 style="text-align: center; color: white;" class="bg-danger mt-5 p-3">Sorry ! We did not find any doctor</h4>
+
+    {% endif %}
+
+</div>
 {% endblock mainContent %}
