--- a/mainApp/templates/mainApp/finddoctor.html
+++ b/mainApp/templates/mainApp/finddoctor.html
@@ -1,31 +1,45 @@
 {% extends 'mainApp/base.html' %}
 {% load static %}
+{% load auth_extras %}
 
 {% block title%} Find Doctor {% endblock title %}
 
 
 {% block mainContent %}
-    <div class="container">
-        {% if doctors %}
-        <div class="row justify-content-evenly">
-            {% for doctor in doctors %}
 
-            <div class="card col-xl-4 col-lg-3 col-md-2 col-1 gy-5" style="width: 18rem;">
-                <img src="/media/{{doctor.profile_pic}}" class="card-img-top" alt="doctor image">
-                <div class="card-body">
-                  <!-- <h5 style="text-align: center;"> Dr. {{doctor.fullName|slice:":15"}}...</h5> -->
-                  <h5 style="text-align: center;"> Dr. {{doctor.fullName}}</h5>
-                    <p>{{doctor.department}}</p>
-                  <div class="view-book-container">
-                    <a href="{% url 'doctorprofile' doctor.id %}"><button class="btn" style="background-color: #B7274C;"> <span style="font-size: 12px; color: white;">View Profile</span> </button></a>
-                    <a href="#"><button class="btn " style="background-color: #164A96;;"><span style="font-size: 12px; color: white;">Book Appointment</span></button></a>
-                  </div>
-                </div>
-              </div>
-            {% endfor %}
+<div class="container">
+  {% if doctors %}
+  <div class="row justify-content-evenly">
+    {% for doctor in doctors %}
 
+    <div class="card col-xl-4 col-lg-3 col-md-2 col-1 gy-5" style="width: 18rem;">
+      <img src="/media/{{doctor.profile_pic}}" class="card-img-top" alt="doctor image">
+      <div class="card-body">
+        <!-- <h5 style="text-align: center;"> Dr. {{doctor.fullName|slice:":15"}}...</h5> -->
+        <h5 style="text-align: center;"> Dr. {{doctor.fullName}}</h5>
+        <p>{{doctor.department}}</p>
+        <div class="view-book-container">
+          
+          {% if request.user|has_group:"doctor" or request.user|has_group:"staff" %}
+
+          <a href="{% url 'doctorprofile' doctor.id %}"><button class="btn" style="background-color: #B7274C;"> <span
+            style="font-size: 12px; color: white;">View Profile</span> </button></a>
+
+          {% else %}
+          <a href="{% url 'doctorprofile' doctor.id %}"><button class="btn" style="background-color: #B7274C;"> <span
+            style="font-size: 12px; color: white;">View Profile</span> </button></a>
+
+            <a href="#"><button class="btn " style="background-color: #164A96;;"><span
+              style="font-size: 12px; color: white;">Book Appointment</span></button></a>
+
+          {% endif %}
         </div>
-            
-        {% endif %}
+      </div>
     </div>
+    {% endfor %}
+
+  </div>
+
+  {% endif %}
+</div>
 {% endblock mainContent %}
