--- a/userAuth/templates/userAuth/viewDoctorAppointment.html
+++ b/userAuth/templates/userAuth/viewDoctorAppointment.html
@@ -17,7 +17,7 @@
         <div style="text-align: center;" class="col-lg-4 col-12 doctor-image-container border p-5">
             <img class="img-fluid" src="/media/{{doctor.profile_pic}}" alt="doctor picture">
             <h3>Dr. {{doctor.fullName}}</h3>
-            <p>{{doctor.department}}</p>    
+            <p>{{doctor.department}}</p>
         </div>
 
         <div class="col-lg-8 col-12 doctor-details-container">
@@ -44,55 +44,100 @@
 
     <div class="appointment-lists-container mt-3">
         <h4 class="mt-3 mb-3">Appointments</h4>
+        {% if doctor %}
         <div class="d-flex gap-3">
-        <button type="button" class="btn btn-light btn-outline-primary">Today</button>
-        <button type="button" class="btn btn-light">Tomorrow</button>
-        <button type="button" class="btn btn-light">Day after tomorrow</button>
+            <!-- <button id="day1"  type="button" class="btn btn-light btn-outline-primary"></button> -->
+            <a href="{% url 'viewDoctorAppointment' doctor.id 1 %}"><button id="day1" type="button"
+                    class="btn btn-light"></button></a>
+            <a href="{% url 'viewDoctorAppointment' doctor.id 2 %}"><button id="day2" type="button"
+                    class="btn btn-light"></button></a>
+            <a href="{% url 'viewDoctorAppointment' doctor.id 3 %}"><button id="day3" type="button"
+                    class="btn btn-light"></button></a>
+            <a href="{% url 'viewDoctorAppointment' doctor.id 4 %}"><button id="day4" type="button"
+                    class="btn btn-light"></button></a>
+            <a href="{% url 'viewDoctorAppointment' doctor.id 5 %}"><button id="day5" type="button"
+                    class="btn btn-light"></button></a>
+            <a href="{% url 'viewDoctorAppointment' doctor.id 6 %}"><button id="day6" type="button"
+                    class="btn btn-light"></button></a>
+            <a href="{% url 'viewDoctorAppointment' doctor.id 7 %}"><button id="day7" type="button"
+                    class="btn btn-light"></button></a>
+
+
         </div>
+        {% endif %}
 
         <div class="appointed-patient-container">
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
                     <thead>
-                      <tr>
-                        <th scope="col">#</th>  
-                        <th scope="col">Id</th>
-                        <th scope="col">Patient</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Time</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Payment status</th>
-                        <th scope="col">Actions</th>
-                      </tr>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Id</th>
+                            <th scope="col">Patient</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Time</th>
+                            <th scope="col">Status</th>
+                            <th scope="col">Payment status</th>
+                            <th scope="col">Actions</th>
+                        </tr>
                     </thead>
                     {% if todayAppointment %}
                     <tbody>
                         {% for app in todayAppointment %}
-                      <tr>
-                        <th scope="row">{{forloop.counter}}</th>
-                        <td>{{app.id}}</td>
-                        {% if app.patient%}
-                        <td>{{app.patient.fullName}}</td>
-                        {% else%}
-                        <td>{{app.nonRegisteredPatient.fullName}}</td>
-                        {% endif %}
+                        <tr>
+                            <th scope="row">{{forloop.counter}}</th>
+                            <td>{{app.id}}</td>
+                            {% if app.patient%}
+                            <td>{{app.patient.fullName}}</td>
+                            {% else%}
+                            <td>{{app.nonRegisteredPatient.fullName}}</td>
+                            {% endif %}
 
-                        <td>{{app.appointmentDate}}</td>
-                        <td>{{app.appointmentTime}}</td>
-                        <td>{{app.appointmentStatus}}</td>
-                        <td>{{app.paymentStatus}}</td>
-                        <td>actions</td>
-                      </tr>
-        
-                      {% endfor %}
+                            <td>{{app.appointmentDate}}</td>
+                            <td>{{app.appointmentTime}}</td>
+                            <td>{{app.appointmentStatus}}</td>
+                            <td>{{app.paymentStatus}}</td>
+                            <td>actions</td>
+                        </tr>
+
+                        {% endfor %}
                     </tbody>
                     {% endif %}
-                  </table>
+                </table>
+            </div>
         </div>
+
     </div>
 
-</div
+    <script>
+        dayList = new Array(7)
 
-{% endif %}
-{% endif %}
-{% endblock userDashContent %}
+        for (let i = 0; i < dayList.length; i++) {
+            d = 'day' + (i + 1)
+            dayList[i] = document.getElementById(d)
+        }
+
+        for (let i = 0; i < dayList.length; i++) {
+            const today = new Date()
+            const tomorrow = new Date(today)
+            tomorrow.setDate(tomorrow.getDate() + i)
+            dayList[i].innerHTML = tomorrow.getMonth() + 1 + '-' + tomorrow.getDate()
+        }
+//     day1 = document.getElementById('day1')
+//     day2 = document.getElementById('day2')
+//     day3 = document.getElementById('day3')
+//     day4 = document.getElementById('day4')
+//     day5 = document.getElementById('day5')
+//     day6 = document.getElementById('day6')
+//     day7 = document.getElementById('day7')
+
+//     const today = new Date()
+// tomorrow.setDate(tomorrow.getDate() + 1)
+
+
+    </script>
+
+
+    {% endif %}
+    {% endif %}
+    {% endblock userDashContent %}
