--- a/userAuth/static/userAuth/css/style.css
+++ b/userAuth/static/userAuth/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
@@ -40,11 +40,11 @@
     padding: 10px 40px 10px 40px;
 }
 
-.user-navigation-dashboard{
+.user-navigation-dashboard {
     display: flex;
 }
 
-.user-dashboard{
+.user-dashboard {
     width: 100%;
     padding: 10px 40px 10px 40px;
 }
@@ -94,7 +94,7 @@
 
 }
 
-.user-nav-setting{
+.user-nav-setting {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -111,23 +111,67 @@
     text-align: center;
 } */
 
-.user-accounts-setting{
+.user-accounts-setting {
     text-align: center;
 }
 
 
 
-.user-accounts-setting a{
+.user-accounts-setting a {
     color: black;
     text-decoration: none;
 }
 
-#custom-active{
+#custom-active {
     color: #0AB8B7;
 }
 
-.experience-education-container h5{
+.experience-education-container h5 {
     background-color: #ed6fac;
-     padding: 5px 0px 5px 0px; 
-     text-align: center; color: white;
+    padding: 5px 0px 5px 0px;
+    text-align: center;
+    color: white;
+}
+
+
+/* for dashboard css  */
+/* .dashboard-content {
+    height: 100vh;
+    overflow: auto;
+    padding: 20px;
+    padding-top: 80px;
+}
+
+.sidenav {
+    margin-top: 60px;
+}
+
+.sidenav a, .dropdown-btn {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #fff;
+    display: block;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+}
+
+.dropdown-container {
+    padding-left: 8px;
+}
+
+.dropdown-container a {
+    font-size: 16px;
+}
+
+@media screen and (max-width: 550px) {
+    .sidenav-container {
+        float: left;
+        position: fixed;
+        z-index: 0;
     }
+} */
