making dashboard view responsive

--- a/mainApp/static/mainApp/css/style.css
+++ b/mainApp/static/mainApp/css/style.css
@@ -2,7 +2,7 @@
     font-weight: bold;
     font-size: 28px;
     text-decoration: none;
-    margin-right: 20%;
+    /* margin-right: 20%; */
     color: #0AB8B7;
 
 }
