--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -28,7 +28,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul id="customHeaderUl" class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul id="customHeaderUl" class="navbar-nav me-auto mb-2 ms-auto me-auto mb-lg-0">
           <li id="{{homeactive}}"  class="nav-item">
             <a class="nav-link" href="{% url 'home'%}">Home</a>
           </li>
@@ -47,12 +47,12 @@
           </li>
         </ul>
 
-        <div class="d-flex">
+        <div class="d-flex gap-3">
           {% if request.user.is_authenticated %}
-          <a href="{% url 'userDashHome' %}"><button class="btn btn-outline-info mx-3">Profile</button> </a>
+          <a href="{% url 'userDashHome' %}"><button class="btn btn-outline-info">Profile</button> </a>
           <a href="{% url 'logout' %}"><button class="btn btn-outline-danger">Logout</button></a>
           {% else %}
-          <a href="{% url 'login' %}"><button class="btn btn-outline-success mx-3">Login</button> </a>
+          <a href="{% url 'login' %}"><button class="btn btn-outline-success">Login</button> </a>
           <a href="{% url 'signup' %}"><button class="btn btn-outline-primary">Signup</button></a>
           {% endif %}
         </div>
