--- a/userAuth/static/userAuth/css/style.css
+++ b/userAuth/static/userAuth/css/style.css
@@ -75,8 +75,8 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 25px;
-    padding: 10px;
+    gap: 20px;
+    padding-left: 0px;
 }
 
 #user-dash-nav-active {
@@ -94,22 +94,8 @@
 
 }
 
-.user-nav-setting {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 75vh;
-}
 
-/* .user-accounts-setting {
-    position: absolute;
-    bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    text-align: center;
-} */
+
 
 .user-accounts-setting {
     text-align: center;
