--- a/userAuth/templates/userAuth/baseUserDash.html
+++ b/userAuth/templates/userAuth/baseUserDash.html
@@ -4,137 +4,180 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="{% static 'userAuth/css/style.css'%}">
+    <link rel="stylesheet" href="{% static 'userAuth/css/style.css'%}">
 
-  <script src="https://kit.fontawesome.com/0564185990.js" crossorigin="anonymous"></script>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>NH | User | {% block title%} {% endblock title%}</title>
+    <script src="https://kit.fontawesome.com/9408609606.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>NH | User | {% block title%} {% endblock title%}</title>
+
+    <style>
+        .dashboard-content {
+            height: 100vh;
+            overflow: auto;
+            padding: 20px;
+            padding-top: 80px;
+        }
+
+
+        .sidenav a,
+        .dropdown-btn {
+            padding: 6px 8px 6px 16px;
+            text-decoration: none;
+            font-size: 18px;
+            color: #fff;
+            display: block;
+            border: none;
+            background: none;
+            width: 100%;
+            text-align: left;
+            cursor: pointer;
+            outline: none;
+        }
+
+        .dropdown-container {
+            padding-left: 8px;
+        }
+
+        .dropdown-container a {
+            font-size: 16px;
+        }
+
+        .sidenav-container {
+            float: left;
+            position: fixed;
+            z-index: 1;
+        }
+
+        /* @media screen and (max-width: 550px) {
+            .sidenav-container {
+                float: left;
+                position: fixed;
+                z-index: 0;
+            }
+        } */
+    </style>
 </head>
 
-<body id="user-dash-body">
-  {% if request.user.is_authenticated %}
+<body>
+    {% if request.user.is_authenticated %}
 
-  <div class="user-navigation-dashboard">
-
-    <div class="user-navigation">
-
-      <div class="userDashNav">
-
-        <div class="user-profile">
-          <div id="user-profile-pic-container">
-            <!-- if thre the user has uploaded profile picture then it will show the particular picture -->
-            {% if p_prof.profile_pic %}
-            <img class="user-profile-pic" src="/media/{{p_prof.profile_pic}}" alt="profile">
-            {% elif d_prof.profile_pic %}
-            <img class="user-profile-pic" src="/media/{{d_prof.profile_pic}}" alt="profile">
-            {% elif s_prof.profile_pic %}
-            <img class="user-profile-pic" src="/media/{{s_prof.profile_pic}}" alt="profile">
-            {% else %}
-            <!-- else it will show the difault picture -->
-            <img class="user-profile-pic" src="{% static 'userAuth/images/nopic.png'%}" alt="">
-            {% endif %}
-          </div>
-          <p style="font-size: 16px;">{{request.user.username}}</p>
+    <header class="bg-light d-flex gap-3 p-2" style="position: fixed; top:0; z-index: 1; width: 100%;">
+        <div class="p-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
+            aria-expanded="false" aria-controls="collapseWidthExample">
+            <span class="text-dark"><i class="fa-solid fa-bars fa-2xl"></i></span>
         </div>
-
-        <hr class="divider">
-
-        <div class="user-nav-setting">
-
-
-          <div class="user-dash-nav">
-            {% if request.user|has_group:"patient" %}
-            <ul>
-              <!-- id="user-dash-nav-active" -->
-              <li><a href="{% url 'userDashHome' %}">Dashboard</a></li>
-              <li><a href="{% url 'bookreguserappointment'%}">Book appointment</a></li>
-              <li><a href="{% url 'myappointments' %}">My appointments</a></li>
-              <li><a href="#">Test results</a></li>
-            </ul>
-            {% elif request.user|has_group:"doctor" %}
-            <ul>
-              <!-- id="user-dash-nav-active" -->
-              <li><a href="{% url 'userDashHome' %}">Dashboard</a></li>
-              <li><a href="#">Appointments</a></li>
-              <li><a href="#">My patients</a></li>
-            </ul>
-            {% elif request.user|has_group:"staff" %}
-            <ul>
-              <!-- id="user-dash-nav-active" -->
-              <li><a href="{% url 'userDashHome' %}">Dashboard</a></li>
-              <li><a id="{{sAddPatient}}" href="{% url 'addNonRegUser' %}">Add patient</a></li>
-              <li><a id="{{sViewPatientActive}}" href="{% url 'viewPatients' %}">Patients List</a></li>
-              <li><a id="{{sViewDoctorActive}}" href="{% url 'viewDoctorsList' %}">Doctors List</a></li>
-            </ul>
-            {% endif %}
-          </div>
-
-          <div class="user-accounts-setting">
-            <hr class="divider">
-            <a href="{% url 'editprofile' %}">Edit Profile</a><br>
-            <a href="{% url 'changepassword' %}">Change Password</a><br>
-            <a href="{% url 'logout' %}">Logout</a>
-          </div>
+        <div>
+            <a style="text-decoration: none;" href="{% url 'home' %}">
+                <h2 style="display: inline;" id="user-dash-hospital-logo">Nepal Hospital</h2>
+            </a>
         </div>
+    </header>
 
-      </div>
+
+    <div class="dashboard-container">
+        <div style="float: left;" class="collapse collapse-horizontal show sidenav-container" id="collapseWidthExample">
+            <div style="min-height: 100vh; width: 250px; background-color: #3d464d; color: white;"
+                class="card card-body">
+                <div style="overflow: auto;" class="sidenav">
+                    <div style="float: right;" class="p-2" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseWidthExample" aria-expanded="false"
+                        aria-controls="collapseWidthExample">
+                        <span class="text-light"><i class="fa-solid fa-close fa-2xl"></i></span>
+                    </div>
 
 
+                    <div style="clear: both;" class="user-profile">
+                        <div id="user-profile-pic-container">
+                            <!-- if thre the user has uploaded profile picture then it will show the particular picture -->
+                            {% if p_prof.profile_pic %}
+                            <img class="user-profile-pic" src="/media/{{p_prof.profile_pic}}" alt="profile">
+                            {% elif d_prof.profile_pic %}
+                            <img class="user-profile-pic" src="/media/{{d_prof.profile_pic}}" alt="profile">
+                            {% elif s_prof.profile_pic %}
+                            <img class="user-profile-pic" src="/media/{{s_prof.profile_pic}}" alt="profile">
+                            {% else %}
+                            <!-- else it will show the difault picture -->
+                            <img class="user-profile-pic" src="{% static 'userAuth/images/nopic.png'%}" alt="">
+                            {% endif %}
+                        </div>
+                        <p style="font-size: 16px;">{{request.user.username}}</p>
+                    </div>
+
+
+
+                    <hr class="divider">
+
+                    <div class="user-nav-setting">
+
+
+                        <div class="user-dash-nav">
+                            {% if request.user|has_group:"patient" %}
+                            <ul>
+                                <!-- id="user-dash-nav-active" -->
+                                <li><a href="{% url 'userDashHome' %}">Dashboard</a></li>
+                                <li><a href="{% url 'bookreguserappointment'%}">Book appointment</a></li>
+                                <li><a href="{% url 'myappointments' %}">My appointments</a></li>
+                                <li><a href="#">Test results</a></li>
+                            </ul>
+                            {% elif request.user|has_group:"doctor" %}
+                            <ul>
+                                <!-- id="user-dash-nav-active" -->
+                                <li><a href="{% url 'userDashHome' %}">Dashboard</a></li>
+                                <li><a href="#">Appointments</a></li>
+                                <li><a href="#">My patients</a></li>
+                            </ul>
+                            {% elif request.user|has_group:"staff" %}
+                            <ul>
+                                <!-- id="user-dash-nav-active" -->
+                                <li><a href="{% url 'userDashHome' %}">Dashboard</a></li>
+                                <li><a id="{{sAddPatient}}" href="{% url 'addNonRegUser' %}">Add patient</a></li>
+                                <li><a id="{{sViewPatientActive}}" href="{% url 'viewPatients' %}">Patients List</a>
+                                </li>
+                                <li><a id="{{sViewDoctorActive}}" href="{% url 'viewDoctorsList' %}">Doctors List</a>
+                                </li>
+                            </ul>
+                            {% endif %}
+
+                            <hr class="divider">
+
+                            <ul>
+                              <li> <a href="{% url 'editprofile' %}"><i class="fas fa-edit"></i> Profile</a></li> 
+                               <li><a href="{% url 'changepassword' %}"><i class="fa-solid fa-lock"></i> Change</a></li> 
+                                <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
 
 
-    <div style="height: 100vh; overflow: auto;" class="user-dashboard">
+    <div class="dashboard">
+        <div class="dashboard-content container">
 
-      <div class="userDash">
-        <a style="text-decoration: none;" href="{% url 'home'%}">
-          <div style="text-align: center;">
-            <h2 style="display: inline;" id="user-dash-hospital-logo">Nepal Hospital</h2>
-          </div>
-        </a>
-
-        {% block userDashContent %}
+            {% block userDashContent %}
 
 
 
-        {% endblock userDashContent %}
-
-      </div>
+            {% endblock userDashContent %}
+        </div>
     </div>
-  </div>
+    </div>
 
+    {% endif %}
 
-  {% endif %}
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-
-  <script>
-    function deleteUser(id) {
-
-      let c = confirm("Are you sure you want to delete the user ?")
-      if (c) {
-        alert("User deleted sucessfully")
-        location.href = `/accounts/deleteNonRegUser/${id}`
-      }
-    }
-
-
-    var message_ele = document.getElementById("edit-patient-message");
-
-    setTimeout(function () {
-      message_ele.style.display = "none";
-    }, 5000);
-  </script>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
