--- a/userAuth/templates/userAuth/viewPatients.html
+++ b/userAuth/templates/userAuth/viewPatients.html
@@ -8,48 +8,66 @@
 
 {% if request.user|has_group:"staff" %}
 
-    <h4 style="text-align: center; margin-top: 40px;">Patients Lists</h4>
+<h4 style="text-align: center; margin-top: 40px;">Patients Lists</h4>
 
-    <form style="width: 75%;">
-        <div class="mb-3 d-flex gap-1">
-            <input type="search" class="form-control" placeholder="search patient with name"> <button class="btn btn-dark">Search</button>
-        </div>
-    </form>
-    <div class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead>
-              <tr>
-                <th scope="col">#</th>  
-                <th scope="col">Id</th>
-                <th scope="col">Name</th>
-                <th scope="col">Address</th>
-                <th scope="col">Age</th>
-                <th scope="col">Gender</th>
-                <th scope="col">Phone</th>
-                <th scope="col">Actions</th>
-              </tr>
-            </thead>
-            {% if nPatientDetails %}
-            <tbody>
-                {% for npd in nPatientDetails %}
-              <tr>
-                <th scope="row">{{forloop.counter}}</th>
-                <td>{{npd.id}}</td>
-                <td>{{npd.fullName}}</td>
-                <td>{{npd.address}}</td>
-                <td>{{npd.age}}</td>
-                <td>{{npd.gender}}</td>
-                <td>{{npd.phone}}</td>
-                <td class="d-flex gap-3"> <a href="{% url 'updateNonRegPatient' npd.id %}"><button class="btn btn-success"><span style="font-size: 12px;">Edit</span></button></a>  <button onclick="deleteUser('{{npd.id}}')" class="btn btn-danger" ><span style="font-size:12px;">Delete</span></button> <a href="{% url 'bookAppointmentNonReg' npd.id %}"><button class="btn" style="background-color: #164A96; font-size: 12px;"> <span style="color: white;">Book appointment</span></button></a></td>
-              </tr>
+<form style="width: 75%;">
+  <div class="mb-3 d-flex gap-1">
+    <input type="search" class="form-control" placeholder="search patient with name"> <button
+      class="btn btn-dark">Search</button>
+  </div>
+</form>
+<div class="table-responsive">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Address</th>
+        <th scope="col">Age</th>
+        <th scope="col">Gender</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    {% if nPatientDetails %}
+    <tbody>
+      {% for npd in nPatientDetails %}
+      <tr>
+        <th scope="row">{{forloop.counter}}</th>
+        <td>{{npd.id}}</td>
+        <td>{{npd.fullName}}</td>
+        <td>{{npd.address}}</td>
+        <td>{{npd.age}}</td>
+        <td>{{npd.gender}}</td>
+        <td>{{npd.phone}}</td>
+        <td class="d-flex gap-3"> <a href="{% url 'updateNonRegPatient' npd.id %}"><button class="btn btn-success"><span
+                style="font-size: 12px;">Edit</span></button></a> <button onclick="deleteUser('{{npd.id}}')"
+            class="btn btn-danger"><span style="font-size:12px;">Delete</span></button> <a
+            href="{% url 'bookAppointmentNonReg' npd.id %}"><button class="btn"
+              style="background-color: #164A96; font-size: 12px;"> <span style="color: white;">Book
+                appointment</span></button></a></td>
+      </tr>
 
-              {% endfor %}
-            </tbody>
-            {% else %}
-                <h4>No records found</h4>
-            {% endif %}
-          </table>
-    </div>
+      {% endfor %}
+    </tbody>
+    {% else %}
+    <h4>No records found</h4>
     {% endif %}
-  {% endif %}
+  </table>
+</div>
+
+
+<script>
+  function deleteUser(id) {
+
+    let c = confirm("Are you sure you want to delete the user ?")
+    if (c) {
+      alert("User deleted sucessfully")
+      location.href = `/accounts/deleteNonRegUser/${id}`
+    }
+  }
+</script>
+{% endif %}
+{% endif %}
 {% endblock userDashContent %}
