--- a/userAuth/templates/userAuth/baseUserDash.html
+++ b/userAuth/templates/userAuth/baseUserDash.html
@@ -147,9 +147,11 @@
                             <hr class="divider">
 
                             <ul>
-                              <li> <a href="{% url 'editprofile' %}"><i class="fas fa-edit"></i> Profile</a></li> 
-                               <li><a href="{% url 'changepassword' %}"><i class="fa-solid fa-lock"></i> Change</a></li> 
-                                <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
+                                <li> <a href="{% url 'editprofile' %}"><i class="fas fa-edit"></i> Profile</a></li>
+                                <li><a href="{% url 'changepassword' %}"><i class="fa-solid fa-lock"></i> Change</a>
+                                </li>
+                                <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>
+                                        Logout</a></li>
                             </ul>
 
                         </div>
@@ -178,6 +180,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+
+    <script>
+        
+
+
+        // var message_ele = document.getElementById("edit-patient-message");
+
+        // setTimeout(function () {
+        //     message_ele.style.display = "none";
+        // }, 5000);
+
+
+    </script>
 </body>
 
 </html>
