--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -35,8 +35,8 @@
           <li id="{{fdoctoractive}}" class="nav-item">
             <a class="nav-link" href="{% url 'finddoctor' %}">Find A Doctor</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Predict Diseases</a>
+          <li id="{{fdiseasesactive}}" class="nav-item">
+            <a class="nav-link" href="{% url 'predictdiseases' %}">Predict Diseases</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About us</a>
