--- a/userAuth/templates/userAuth/baseUserDash.html
+++ b/userAuth/templates/userAuth/baseUserDash.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+        <!-- khalti integration -->
+        <script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>
     <title>NH | User | {% block title%} {% endblock title%}</title>
 
     <style>
@@ -30,7 +33,7 @@
             padding: 6px 8px 6px 16px;
             text-decoration: none;
             font-size: 18px;
-            color: #fff;
+            color: white;
             display: block;
             border: none;
             background: none;
@@ -82,13 +85,13 @@
 
     <div class="dashboard-container">
         <div style="float: left;" class="collapse collapse-horizontal show sidenav-container" id="collapseWidthExample">
-            <div style="min-height: 100vh; width: 250px; background-color: #3d464d; color: white;"
+            <div style="min-height: 100vh; width: 250px; color: white; background-color: #202020;"
                 class="card card-body">
                 <div style="overflow: auto;" class="sidenav">
                     <div style="float: right;" class="p-2" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseWidthExample" aria-expanded="false"
                         aria-controls="collapseWidthExample">
-                        <span class="text-light"><i class="fa-solid fa-close fa-2xl"></i></span>
+                        <span class="text-darkt"><i class="fa-solid fa-close fa-2xl"></i></span>
                     </div>
 
 
@@ -182,18 +185,52 @@
         crossorigin="anonymous"></script>
 
 
-    <script>
+    
         
 
-
+    <script>
         // var message_ele = document.getElementById("edit-patient-message");
 
         // setTimeout(function () {
         //     message_ele.style.display = "none";
         // }, 5000);
 
+        var config = {
+            // replace the publicKey with yours
+            "publicKey": "test_public_key_9faccf64b8b3406db41430f2247fe937",
+            "productIdentity": "1234567890",
+            "productName": "Dragon",
+            "productUrl": "http://gameofthrones.wikia.com/wiki/Dragons",
+            "paymentPreference": [
+                "KHALTI",
+                "EBANKING",
+                "MOBILE_BANKING",
+                "CONNECT_IPS",
+                "SCT",
+                ],
+            "eventHandler": {
+                onSuccess (payload) {
+                    // hit merchant api for initiating verfication
+                    console.log(payload);
+                },
+                onError (error) {
+                    console.log(error);
+                },
+                onClose () {
+                    console.log('widget is closing');
+                }
+            }
+        };
 
+        var checkout = new KhaltiCheckout(config);
+        var btn = document.getElementById("payment-button");
+        btn.onclick = function () {
+            // minimum transaction amount must be 10, i.e 1000 in paisa.
+            checkout.show({amount: 20000});
+        }
+    
     </script>
+
 </body>
 
 </html>
