added dashboard cards and doctors to view their appointed patients

--- a/userAuth/static/userAuth/css/style.css
+++ b/userAuth/static/userAuth/css/style.css
@@ -161,3 +161,13 @@
         z-index: 0;
     }
 } */
+
+
+/* patient dashboard css  */
+
+.dashboard-card{
+    border-radius: 10px;
+    height: 200px;
+    text-align: center;
+    cursor: pointer;
+}
