--- a/userAuth/templates/userAuth/baseUserDash.html
+++ b/userAuth/templates/userAuth/baseUserDash.html
@@ -15,8 +15,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-        <!-- khalti integration -->
-        <script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>
+    <!-- khalti integration -->
+    <script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>
     <title>NH | User | {% block title%} {% endblock title%}</title>
 
     <style>
@@ -84,7 +84,7 @@
 
 
     <div class="dashboard-container">
-        <div style="float: left;" class="collapse collapse-horizontal show sidenav-container" id="collapseWidthExample">
+        <div style="float: left;" class="collapse collapse-horizontal sidenav-container" id="collapseWidthExample">
             <div style="min-height: 100vh; width: 250px; color: white; background-color: #202020;"
                 class="card card-body">
                 <div style="overflow: auto;" class="sidenav">
@@ -126,13 +126,13 @@
                                 <li><a href="{% url 'userDashHome' %}">Dashboard</a></li>
                                 <li><a href="{% url 'bookreguserappointment'%}">Book appointment</a></li>
                                 <li><a href="{% url 'myappointments' %}">My appointments</a></li>
-                                <li><a href="#">Test results</a></li>
+                                <li><a href="#">Test report</a></li>
                             </ul>
                             {% elif request.user|has_group:"doctor" %}
                             <ul>
                                 <!-- id="user-dash-nav-active" -->
                                 <li><a href="{% url 'userDashHome' %}">Dashboard</a></li>
-                                <li><a href="#">Appointments</a></li>
+                                <li><a href="{% url 'viewMyAppDoc' 1 %}">Appointments</a></li>
                                 <li><a href="#">My patients</a></li>
                             </ul>
                             {% elif request.user|has_group:"staff" %}
@@ -153,7 +153,7 @@
                                 <li> <a href="{% url 'editprofile' %}"><i class="fas fa-edit"></i> Profile</a></li>
                                 <li><a href="{% url 'changepassword' %}"><i class="fa-solid fa-lock"></i> Change</a>
                                 </li>
-                                <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>
+                                <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>
                                         Logout</a></li>
                             </ul>
 
@@ -185,8 +185,8 @@
         crossorigin="anonymous"></script>
 
 
-    
-        
+
+
 
     <script>
         // var message_ele = document.getElementById("edit-patient-message");
@@ -207,16 +207,16 @@
                 "MOBILE_BANKING",
                 "CONNECT_IPS",
                 "SCT",
-                ],
+            ],
             "eventHandler": {
-                onSuccess (payload) {
+                onSuccess(payload) {
                     // hit merchant api for initiating verfication
                     console.log(payload);
                 },
-                onError (error) {
+                onError(error) {
                     console.log(error);
                 },
-                onClose () {
+                onClose() {
                     console.log('widget is closing');
                 }
             }
@@ -226,9 +226,42 @@
         var btn = document.getElementById("payment-button");
         btn.onclick = function () {
             // minimum transaction amount must be 10, i.e 1000 in paisa.
-            checkout.show({amount: 20000});
+            checkout.show({ amount: 20000 });
         }
-    
+
+
+        // for registered user functions
+
+        function redirectToRegBookApp() {
+
+            location.href = `/scheduleAppointment/bookreguserappointment`
+            
+        }
+
+        function redirectToRegViewApp(){
+            location.href = "/scheduleAppointment/myappointments"
+        }
+
+        function redirectToRegTestResult()
+        {
+
+        }
+
+        function editProfile()
+        {
+            location.href = "/accounts/editprofile/"
+        }
+
+        function changePassword()
+        {
+            location.href = "/accounts/changepassword/"
+        }
+
+        function userLogout()
+        {
+            location.href = "/accounts/logout/"
+        }
+
     </script>
 
 </body>
